Switched to official Mailhog image. Updated README.md and CHANGELOG.md

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,7 +125,7 @@ services:
               
 ################ Extra toolkit images.
     mailhog:
-        image: lordius/alpine-mailhog
+        image: mailhog/mailhog
         networks:
             internal:
             shared:
