--- a/docker/images/php-fpm/Dockerfile
+++ b/docker/images/php-fpm/Dockerfile
@@ -1,4 +1,6 @@
-#lordius/alpine-php_fpm
+# lordius/alpine-php_fpm
 FROM lordius/alpine-php_fpm
 LABEL maintainer=andriy.khomych@gmail.com
 RUN apk add --no-cache php7-sysvshm
+# Example of installing pdf2text utilities.
+RUN apk add --no-cache poppler-utils
