--- a/docker/images/mysql/conf/windows.cnf
+++ b/docker/images/mysql/conf/windows.cnf
@@ -1,3 +1,9 @@
 [mysqld]
 innodb_use_native_aio=0
-
+max_allowed_packet=512M
+[query]
+log_output=FILE
+slow_query_log=1
+slow_query_log_file=/var/log/mysql/mysql.slow 
+long_query_time=0.001 
+log-queries-not-using-indexes=0
