--- a/docker/images/php-fpm/Dockerfile
+++ b/docker/images/php-fpm/Dockerfile
@@ -14,8 +14,7 @@ RUN cd /tmp/xhprof/extension && phpize && \
    echo 'xhprof.output_dir=/var/xhprof' >> /etc/php7/conf.d/xhprof.ini
 RUN mkdir /var/xhprof
 RUN chmod -R 777 /var/xhprof
-# Add graphviz for visual reports.
-# Add graphviz for visual reports.
+# Add graphviz for visual render.
 RUN apk add --no-cache graphviz \
                        ttf-freefont
 
