--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,7 @@ services:
         # image: akhomy/alpine-php-fpm:php-7.0
         volumes:
             - ./crontasks.txt:/home/crontasks.txt
-            - web:${PHP_FPM_ROOT}:cached
-            - web-docker-sync:${PHP_FPM_ROOT}:nocopy
+            - web:${PHP_FPM_ROOT}
             # Attaches sample configs if necessary.
             - ${PHP_TEMP_CONFIGS}
         environment:
@@ -49,8 +48,7 @@ services:
         container_name: "${PROJECT_NAME}-apache-fpm"
         image: akhomy/alpine-apache:${APACHE_TAG}
         volumes:
-            - web:${APACHE_DOCUMENT_ROOT}:cached
-            - web-docker-sync:${APACHE_DOCUMENT_ROOT}:nocopy
+            - web:${APACHE_DOCUMENT_ROOT}
             # Attaches sample configs if necessary.
             - ${APACHE_TEMP_CONFIGS}
         labels:
@@ -76,8 +74,7 @@ services:
         container_name: "${PROJECT_NAME}-nginx"
         image: akhomy/alpine-nginx:${NGINX_TAG}
         volumes:
-            - web:${NGINX_SERVER_ROOT}:cached
-            - web-docker-sync:${NGINX_SERVER_ROOT}:nocopy
+            - web:${NGINX_SERVER_ROOT}
         # Attach sample configs if necessary.
             - ${NGINX_TEMP_CONFIGS}
         labels:
@@ -185,8 +182,7 @@ services:
         image: mysql:${MYSQL_TAG}
         # build: docker/images/mysql/.
         volumes:
-            - mysql:${MYSQL_LIB_PATH}:cached
-            - mysql-docker-sync:${MYSQL_LIB_PATH}:nocopy
+            - mysql:${MYSQL_LIB_PATH}
         environment:
             MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
             MYSQL_USER: ${MYSQL_USER}
@@ -251,9 +247,3 @@ volumes:
             type: none
             device: $PWD/docker/runtime/mysql
             o: bind
-    web-docker-sync:
-        name: "web-${PROJECT_NAME}-docker-sync"
-        external: true
-    mysql-docker-sync:
-        name: "mysql-${PROJECT_NAME}-docker-sync"
-        external: true
