--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,10 +45,10 @@ services:
                 - ${PHP_FPM_SHARED_NETWORK_ALIAS}
 
     apache-mpm:
-        container_name: "${PROJECT_NAME}-apache-fpm"
+        container_name: "${PROJECT_NAME}-apache-mpm"
         image: akhomy/alpine-apache:${APACHE_TAG}
         volumes:
-            - web:${APACHE_DOCUMENT_ROOT}
+            - web:${PHP_FPM_ROOT}
             # Attaches sample configs if necessary.
             - ${APACHE_TEMP_CONFIGS}
         labels:
@@ -74,7 +74,7 @@ services:
         container_name: "${PROJECT_NAME}-nginx"
         image: akhomy/alpine-nginx:${NGINX_TAG}
         volumes:
-            - web:${NGINX_SERVER_ROOT}
+            - web:${PHP_FPM_ROOT}
         # Attach sample configs if necessary.
             - ${NGINX_TEMP_CONFIGS}
         labels:
