--- a/docker/docker-compose/templates/docker-compose.template.xhprof.sync.yml
+++ b/docker/docker-compose/templates/docker-compose.template.xhprof.sync.yml
@@ -48,8 +48,8 @@ services:
     apache-mpm:
         image: akhomy/alpine-apache:${APACHE_TAG}
         volumes:
-            - web:${APACHE_DOCUMENT_ROOT}:cached
-            - web-docker-sync:${APACHE_DOCUMENT_ROOT}:nocopy
+            - web:${PHP_FPM_ROOT}:cached
+            - web-docker-sync:${PHP_FPM_ROOT}:nocopy
             # Attaches sample configs if necessary.
             - ${APACHE_TEMP_CONFIGS}
         labels:
@@ -74,8 +74,8 @@ services:
     nginx:
         image: akhomy/alpine-nginx:${NGINX_TAG}
         volumes:
-            - web:${NGINX_SERVER_ROOT}:cached
-            - web-docker-sync:${NGINX_SERVER_ROOT}:nocopy
+            - web:${PHP_FPM_ROOT}:cached
+            - web-docker-sync:${PHP_FPM_ROOT}:nocopy
         # Attach sample configs if necessary.
             - ${NGINX_TEMP_CONFIGS}
         labels:
