--- a/.env
+++ b/.env
@@ -2,8 +2,9 @@
 PROJECT_NAME=docker-compose-web
 
 ### NETWORK SETTINGS
-TRAEFIK_TAG=latest
 TRAEFIK_NETWORK=dockerweb
+
+### Containers.
 ## PHP FPM
 PHP_FPM_TAG=latest
 PHP_FPM_ROOT=/var/www/localhost/htdocs
@@ -79,6 +80,7 @@ VARNISH_TRAEFIK_PORT=80
 VARNISH_TRAEFIK_PROTOCOL=http
 VARNISH_TRAEFIK_HOST=varnish.dockerweb.localhost
 VARNISH_SHARED_NETWORK_ALIAS=varnish.shared
+VARNISH_BLOCKED_URLS=""
 VARNISH_DEBUG=1
 VARNISH_BACKEND_HOST=apache-mpm.shared
 VARNISH_BACKEND_PORT=80
