--- a/docker/.env
+++ b/docker/.env
@@ -2,10 +2,9 @@
 PROJECT_NAME=docker-compose-web
 
 ### NETWORK SETTINGS
-TRAEFIK_TAG=latest
-TRAEFIK_DOCKER_DOMAIN=dockerweb.localhost
-TRAEFIK_LOG_LEVEL=DEBUG
+TRAEFIK_NETWORK=dockerweb
 
+### Containers.
 ## PHP FPM
 PHP_FPM_TAG=latest
 PHP_FPM_ROOT=/var/www/localhost/htdocs
@@ -72,7 +71,7 @@ NGINX_FASTCGI_BUFFER_SIZE=32k
 NGINX_PROXY_BUFFER_SIZE=128k
 NGINX_PROXY_BUFFERS=4 256k
 NGINX_PROXY_BUSY_BUFFER_SIZE=256k
-NGINX_PROXY_PASS=http://varnish.shared:6081
+NGINX_PROXY_PASS=http://apache-mpm.shared:80
 NGINX_OPENSSL_ARGS=req -x509 -nodes -subj '/CN=localhost/O=My Company Name LTD./C=US' -days 2048 -newkey rsa:2048
 
 ## Varnish
@@ -81,6 +80,7 @@ VARNISH_TRAEFIK_PORT=80
 VARNISH_TRAEFIK_PROTOCOL=http
 VARNISH_TRAEFIK_HOST=varnish.dockerweb.localhost
 VARNISH_SHARED_NETWORK_ALIAS=varnish.shared
+VARNISH_BLOCKED_URLS=""
 VARNISH_DEBUG=1
 VARNISH_BACKEND_HOST=apache-mpm.shared
 VARNISH_BACKEND_PORT=80
