--- a/docker/.env
+++ b/docker/.env
@@ -80,7 +80,7 @@ VARNISH_TRAEFIK_PORT=80
 VARNISH_TRAEFIK_PROTOCOL=http
 VARNISH_TRAEFIK_HOST=varnish.dockerweb.localhost
 VARNISH_SHARED_NETWORK_ALIAS=varnish.shared
-VARNISH_BLOCKED_URLS=""
+VARNISH_BLOCKED_URLS=''
 VARNISH_DEBUG=1
 VARNISH_BACKEND_HOST=apache-mpm.shared
 VARNISH_BACKEND_PORT=80
