Reorganize project structure

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 ### PROJECT SETTINGS
 PROJECT_NAME=docker-compose-web
+# Example mount.
+PROJECT_MOUNT=docker/tests
+#PROJECT_MOUNT=webroot
 
 ### NETWORK SETTINGS
 TRAEFIK_NETWORK=dockerweb
