--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
         # image: akhomy/alpine-php-fpm:php-7.0
         volumes:
             - ./crontasks.txt:/home/crontasks.txt
-            - web:${PHP_FPM_ROOT}
+            - web:${PHP_FPM_ROOT}:cached
+            - web-docker-sync:${PHP_FPM_ROOT}:nocopy
             # Attaches sample configs if necessary.
             - ${PHP_TEMP_CONFIGS}
         environment:
@@ -48,7 +49,8 @@ services:
         container_name: "${PROJECT_NAME}-apache-mpm"
         image: akhomy/alpine-apache:${APACHE_TAG}
         volumes:
-            - web:${PHP_FPM_ROOT}
+            - web:${PHP_FPM_ROOT}:cached
+            - web-docker-sync:${PHP_FPM_ROOT}:nocopy
             # Attaches sample configs if necessary.
             - ${APACHE_TEMP_CONFIGS}
         labels:
@@ -74,7 +76,8 @@ services:
         container_name: "${PROJECT_NAME}-nginx"
         image: akhomy/alpine-nginx:${NGINX_TAG}
         volumes:
-            - web:${PHP_FPM_ROOT}
+            - web:${PHP_FPM_ROOT}:cached
+            - web-docker-sync:${PHP_FPM_ROOT}:nocopy
         # Attach sample configs if necessary.
             - ${NGINX_TEMP_CONFIGS}
         labels:
@@ -183,7 +186,8 @@ services:
         image: mysql:${MYSQL_TAG}
         # build: docker/images/mysql/.
         volumes:
-            - mysql:${MYSQL_LIB_PATH}
+            - mysql:${MYSQL_LIB_PATH}:cached
+            - mysql-docker-sync:${MYSQL_LIB_PATH}:nocopy
         environment:
             MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
             MYSQL_USER: ${MYSQL_USER}
@@ -240,7 +244,7 @@ volumes:
         driver: local
         driver_opts:
             type: none
-            device: $PWD/webroot
+            device: $PWD/${PROJECT_MOUNT}
             o: bind
     mysql:
         driver: local
@@ -248,3 +252,9 @@ volumes:
             type: none
             device: $PWD/docker/runtime/mysql
             o: bind
+    web-docker-sync:
+        name: "web-${PROJECT_NAME}-docker-sync"
+        external: true
+    mysql-docker-sync:
+        name: "mysql-${PROJECT_NAME}-docker-sync"
+        external: true
