--- a/docker/.env
+++ b/docker/.env
@@ -1,5 +1,7 @@
 ### PROJECT SETTINGS
 PROJECT_NAME=docker-compose-web
+PROJECT_MOUNT=docker/tests
+#PROJECT_MOUNT=webroot
 
 ### NETWORK SETTINGS
 TRAEFIK_NETWORK=dockerweb
