--- a/docker/docker-compose/templates/docker-compose.template.full.yml
+++ b/docker/docker-compose/templates/docker-compose.template.full.yml
@@ -315,7 +315,7 @@ volumes:
         driver: local
         driver_opts:
             type: none
-            device: $PWD/webroot
+            device: $PWD/${PROJECT_MOUNT}
             o: bind
     solr:
         driver: local
