--- a/docker/docker-compose/templates/docker-compose.template.xhprof.sync.yml
+++ b/docker/docker-compose/templates/docker-compose.template.xhprof.sync.yml
@@ -176,7 +176,7 @@ volumes:
         driver: local
         driver_opts:
             type: none
-            device: $PWD/webroot
+            device: $PWD/${PROJECT_MOUNT}
             o: bind
     xhprof:
         driver: local
