--- a/docker/docker-compose/templates/docker-compose.template.full.yml
+++ b/docker/docker-compose/templates/docker-compose.template.full.yml
@@ -12,6 +12,7 @@ services:
         # image: akhomy/alpine-php-fpm:php-7.1
         # image: akhomy/alpine-php-fpm:php-7.0
         volumes:
+            - ./.ssh:/home/www-data/.ssh
             - ./crontasks.txt:/home/crontasks.txt
             - web:${PHP_FPM_ROOT}
             # Attaches sample configs if necessary.
