--- a/.env
+++ b/.env
@@ -12,9 +12,9 @@ TRAEFIK_NETWORK=dockerweb
 PHP_FPM_TAG=latest
 PHP_FPM_ROOT=/var/www/localhost/htdocs
 # Can be php5, depence on php version.
-PHP_TEMP_CONFIGS=""
+PHP_TEMP_CONFIGS=''
 #PHP_TEMP_CONFIGS=./docker/runtime/php5:/temp_configs_dir/php7
-PHP_USE_ONLY_CONFIGS=""
+PHP_USE_ONLY_CONFIGS=''
 PHP_LINES=100
 PHP_COLUMNS=100
 PHP_OPCACHE_ENABLE=0
@@ -39,13 +39,13 @@ PHP_FPM_SHARED_NETWORK_ALIAS=php-fpm.shared
 ## APACHE
 APACHE_TAG=latest
 APACHE_DOCUMENT_ROOT=/var/www/localhost/htdocs
-APACHE_TEMP_CONFIGS=""
+APACHE_TEMP_CONFIGS=''
 #APACHE_TEMP_CONFIGS=./docker/runtime/apache2:/temp_configs_dir/apache2
 APACHE_TRAEFIK_PROTOCOL=https
 APACHE_TRAEFIK_PORT=443
 APACHE_MPM_TRAEFIK_HOST=apache-mpm.dockerweb.localhost
 APACHE_MPM_SHARED_NETWORK_ALIAS=apache-mpm.shared
-APACHE_USE_ONLY_CONFIGS=""
+APACHE_USE_ONLY_CONFIGS=''
 APACHE_TIMEOUT=300
 APACHE_PROXY_PASS=fcgi://php-fpm.shared:7000/var/www/localhost/htdocs
 APACHE_LISTEN_PORT=80
@@ -53,7 +53,7 @@ APACHE_LISTEN_PORT=80
 ## NGINX
 NGINX_TAG=latest
 NGINX_SERVER_ROOT=/var/www/localhost/htdocs
-NGINX_TEMP_CONFIGS=""
+NGINX_TEMP_CONFIGS=''
 #NGINX_TEMP_CONFIGS=./docker/runtime/nginx:/temp_configs_dir/nginx
 NGINX_TRAEFIK_PORT=443
 NGINX_TRAEFIK_PROTOCOL=https
