Rewrite from TRAEFIK to PROXY variables

--- a/docker/.env
+++ b/docker/.env
@@ -4,7 +4,7 @@ PROJECT_MOUNT=docker/tests
 #PROJECT_MOUNT=webroot
 
 ### NETWORK SETTINGS
-TRAEFIK_NETWORK=dockerweb
+PROXY_NETWORK=dockerweb
 
 ### Containers.
 ## PHP FPM
