--- a/docker/docker-compose/templates/docker-compose.template.xhprof.sync.yml
+++ b/docker/docker-compose/templates/docker-compose.template.xhprof.sync.yml
@@ -40,7 +40,7 @@ services:
             PHP_SHORT_OPEN_TAG: ${PHP_SHORT_OPEN_TAG}
             PHP_MEMORY_LIMIT: ${PHP_MEMORY_LIMIT}
         networks:
-            0_traefik: {}
+            0_proxy: {}
             1_internal: {}
             2_shared:
                 aliases:
@@ -66,7 +66,7 @@ services:
             PROXY_PASS: ${APACHE_PROXY_PASS}
             APACHE_LISTEN_PORT: ${APACHE_LISTEN_PORT}
         networks:
-            0_traefik: {}
+            0_proxy: {}
             1_internal: {}
             2_shared:
                 aliases:
@@ -106,7 +106,7 @@ services:
             OPENSSL_ARGS: ${NGINX_OPENSSL_ARGS}
             PROXY_PASS: ${NGINX_PROXY_PASS}
         networks:
-            0_traefik: {}
+            0_proxy: {}
             1_internal: {}
             2_shared:
                 aliases:
@@ -136,7 +136,7 @@ services:
             - xhprof:${XHPROF_ROOT}:cached
             - xhprof-docker-sync:${XHPROF_ROOT}:nocopy
         networks:
-            0_traefik: {}
+            0_proxy: {}
             1_internal:
                 aliases:
                 - ${XHPROF_INTERNAL_NETWORK_ALIAS}
@@ -155,16 +155,16 @@ services:
             PROXY_PASS: fcgi://${XHPROF_INTERNAL_NETWORK_ALIAS}:7000${XHPROF_ROOT}/xhprof_html
             APACHE_LISTEN_PORT: 80
         networks:
-            0_traefik: {}
+            0_proxy: {}
             1_internal: {}
             2_shared:
                 aliases:
                 - ${APACHE_XHPROF_SHARED_NETWORK_ALIAS}
 
 networks:
-    0_traefik:
+    0_proxy:
         external:
-            name: ${TRAEFIK_NETWORK}
+            name: ${PROXY_NETWORK}
     1_internal:
         driver_opts:
         1_internal: "true"
