--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ PROJECT_MOUNT=docker/tests
 #PROJECT_MOUNT=webroot
 
 ### NETWORK SETTINGS
-TRAEFIK_NETWORK=dockerweb
+PROXY_NETWORK=dockerweb
 
 ### Containers.
 ## PHP FPM
