Add windows template

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 ### PROJECT SETTINGS
+COMPOSE_CONVERT_WINDOWS_PATHS=1
 PROJECT_NAME=docker-compose-web
 # Example mount.
 PROJECT_MOUNT=docker/tests
